# script-kit-gpui

./: .gitignore  AGENTS.md  CLEANUP.md  Cargo.toml  DEV.md  EDITOR_PLAN.md  GLOSSARY.md  GPUI_RESEARCH.md  MCP.md  MENU_PLAN.md  RAYCAST_PARITY.md  README.md  RESIZE_PLAN.md  build.rs  bunfig.toml  dev.sh  package.json  test-script.sh  theme.example.json
.cargo/: config.toml
.hive/: issues.jsonl
audit-docs/: 07-ACCESSIBILITY.md  10-RESPONSIVE_RESIZE.md  14-VISUAL_TESTING.md  17-BEST_PRACTICES.md
docs/: BUN_ALTERNATIVES.md  LIST_RENDERING.md  REM_SIZING_SYSTEM.md  SCRIPTLET_TOOL_MAP.md
expert-bundles/: actions-panel-review.md  clipboard-review.md  kenv-setup-bundle.md  list-rendering-search-perf.md  mcp-schema-review.md  notes-window-coupling-bug.md  notes-window-coupling-review.md  process-management-review.md  search-input-cursor-layout.md  window-visibility-review.md
scripts/: config-cli.ts  config-schema.ts  config-template.ts  demo-arg-div.ts  generate-api-tests.ts  kit-sdk.ts  test-harness.ts  test-runner.ts  visual-regression.sh  visual-test.sh
security-audit/: 01-COMMAND_INJECTION.md  03-CLIPBOARD_ACCESSIBILITY.md  04-FILESYSTEM.md  06-INPUT_VALIDATION.md  09-PRIVILEGE_MACOS.md  10-SDK_SECURITY.md
src/: actions.rs  app_actions.rs  app_execute.rs  app_impl.rs  app_launcher.rs  app_navigation.rs  app_render.rs  builtins.rs  clipboard_history.rs  config.rs  debug_grid.rs  editor.rs  editor_v2.rs  error.rs  execute_script.rs  executor.rs  executor_tests.rs  expand_manager.rs  expand_matcher.rs  file_search.rs  form_parser.rs  form_prompt.rs  frecency.rs  (+55 more)
(+161 files in other folders)
